Modify in html file and css file

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <!-- Link a new font family in this website -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Caladea:ital,wght@0,400;0,700;1,400;1,700&family=Cedarville+Cursive&family=Kalam&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,100;1,500;1,700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caladea:ital,wght@0,400;0,700;1,400;1,700&family=Cedarville+Cursive&family=Kalam&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,100;1,500;1,700&display=swap"
+    rel="stylesheet">
 
     <!-- Link the CSS file of Portfolio -->
     <link rel="stylesheet" href="/style.css">
+
     <!-- Link the JavaScript file -->
     <script src="/javascript.js"></script>
 
@@ -39,7 +39,7 @@
     <!-- Header Part Started from here -->
     <div id="header">
         <div class="container">
-            
+
         </div>
     </div>
 </body>
